# box_jenkins

./: .gitignore  Box-Jenkins Method.ipynb  README.md  Seasonality.ipynb  requirements.txt  setup.cfg
box_jenkins/: __init__.py  auto_corr.py  identification.py
