[metadata]
name = box_jenkins-jmishler
version = attr: box_jenkins.__version__
author = Jonathan Mishler
author_email = jonathan.mishler@gmail.com
description = A package to implement the Box-Jenkins methodology for univariate time series
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:
install_requires =
    statsmodels
    altair
python_requires = >=3.6